--- a/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
+++ b/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="htl.steyr.rockpaperscissors_mhoreth_lkreisma.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+
+<AnchorPane fx:controller="htl.steyr.rockpaperscissors_mhoreth_lkreisma.GameController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="806.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label layoutX="140.0" layoutY="24.0" text="Rock Paper Scissors">
+         <font>
+            <Font size="37.0" />
+         </font>
+      </Label>
+      <Label layoutX="221.0" layoutY="234.0" text="Choose your weapon">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Button layoutX="114.0" layoutY="346.0" mnemonicParsing="false" onAction="#rockButtonClicked" text="Button" />
+      <Button layoutX="275.0" layoutY="346.0" mnemonicParsing="false" onAction="#paperButtonClicked" text="Button" />
+      <Button layoutX="435.0" layoutY="346.0" mnemonicParsing="false" onAction="#scissorsButtonClicked" text="Button" />
+   </children>
+</AnchorPane>
