--- a/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
+++ b/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -12,13 +13,18 @@
             <Font size="37.0" />
          </font>
       </Label>
-      <Label layoutX="221.0" layoutY="234.0" text="Choose your weapon">
+      <Label layoutX="221.0" layoutY="141.0" text="Choose your weapon">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Button layoutX="114.0" layoutY="346.0" mnemonicParsing="false" onAction="#weaponButtonClicked" text="Rock" />
-      <Button layoutX="275.0" layoutY="346.0" mnemonicParsing="false" onAction="#weaponButtonClicked" text="Paper" />
-      <Button layoutX="435.0" layoutY="346.0" mnemonicParsing="false" onAction="#weaponButtonClicked" text="Scissors" />
+      <Button layoutX="119.0" layoutY="309.0" mnemonicParsing="false" onAction="#weaponButtonClicked" text="Rock" />
+      <Button layoutX="277.0" layoutY="309.0" mnemonicParsing="false" onAction="#weaponButtonClicked" text="Paper" />
+      <Button layoutX="432.0" layoutY="309.0" mnemonicParsing="false" onAction="#weaponButtonClicked" text="Scissors" />
+      <ImageView fx:id="myWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="81.0" layoutY="522.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="botWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="400.0" layoutY="522.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="stoneImageView" fitHeight="100.0" fitWidth="100.0" layoutX="90.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="paperImageView" fitHeight="100.0" fitWidth="100.0" layoutX="251.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="scissorsImageView" fitHeight="100.0" fitWidth="100.0" layoutX="411.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
