changed fxml layout. changed background colour of fxml added label to display winner and VS label

--- a/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/Style.css
+++ b/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/Style.css
@@ -15,3 +15,7 @@
     -fx-background-size: cover;
     -fx-background-color:transparent;
 }
+
+#RockPaperScissorsAnchorpane{
+    -fx-background-color: #99ebff;
+}
