--- a/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
+++ b/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
@@ -21,9 +21,9 @@
       <Button fx:id="rockButton" layoutX="96.0" layoutY="248.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
       <Button fx:id="paperButton" layoutX="250.0" layoutY="248.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
       <Button fx:id="scissorsButton" layoutX="405.0" layoutY="248.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
-      <ImageView fx:id="myWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="70.0" layoutY="521.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
-      <ImageView fx:id="botWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="380.0" layoutY="521.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="70.0" />
-      <Label layoutX="284.0" layoutY="521.0" text="VS">
+      <ImageView fx:id="myWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="77.0" layoutY="426.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="76.0" />
+      <ImageView fx:id="botWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="375.0" layoutY="426.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="76.0" />
+      <Label layoutX="285.0" layoutY="482.0" text="VS">
          <font>
             <Font size="27.0" />
          </font>
@@ -37,5 +37,10 @@
       <Label layoutX="65.0" layoutY="725.0" text="Score:" />
       <Label fx:id="scoreLabel" layoutX="109.0" layoutY="725.0" text="--" />
       <Label fx:id="highscoreLabel" layoutX="109.0" layoutY="748.0" text="--" />
+      <Label layoutX="1.0" layoutY="348.0" prefHeight="17.0" prefWidth="600.0" text="--------------------------------------------------">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
