--- a/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/Style.css
+++ b/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/Style.css
@@ -16,6 +16,12 @@
     -fx-background-color:transparent;
 }
 
+#wellButton {
+    -fx-background-image: url("pictures/brunnen.png");
+    -fx-background-size: cover;
+    -fx-background-color:transparent;
+}
+
 #RockPaperScissorsAnchorpane{
     -fx-background-color: #99ebff;
 }
