--- a/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
+++ b/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
@@ -19,12 +19,15 @@
             <Font name="System Bold Italic" size="17.0" />
          </font>
       </Label>
-      <Button fx:id="rockButton" layoutX="96.0" layoutY="248.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
-      <Button fx:id="paperButton" layoutX="250.0" layoutY="248.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
-      <Button fx:id="scissorsButton" layoutX="405.0" layoutY="248.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
+
+       <Button fx:id="rockButton" layoutX="60.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
+      <Button fx:id="paperButton" layoutX="190.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
+      <Button fx:id="scissorsButton" layoutX="320.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
+       <Button fx:id="wellButton" layoutX="450.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
+
       <ImageView fx:id="myWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="71.0" layoutY="446.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="botWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="380.0" layoutY="446.0" pickOnBounds="true" preserveRatio="true" />
-      <ChoiceBox fx:id="musicChoiceBox" layoutX="-1.0" layoutY="730.0"  prefWidth="150.0" />
+      <ChoiceBox fx:id="musicChoiceBox" layoutX="-1.0" layoutY="730.0" prefWidth="150.0" />
       <Label layoutX="16.0" layoutY="700.0" text="Music Player">
          <font>
             <Font size="20.0" />
