--- a/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
+++ b/src/main/resources/htl/steyr/rockpaperscissors_mhoreth_lkreisma/hello-view.fxml
@@ -8,55 +8,66 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="RockPaperScissorsAnchorpane" prefHeight="920.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="htl.steyr.rockpaperscissors_mhoreth_lkreisma.GameController">
-   <children>
-      <Label layoutX="180.0" layoutY="60.0" prefHeight="89.0" prefWidth="272.0" text="Rock Paper Scissors" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
-         <font>
-            <Font name="Gill Sans MT Condensed" size="47.0" />
-         </font>
-      </Label>
-      <Label layoutX="218.0" layoutY="184.0" text="Choose your weapon">
-         <font>
-            <Font name="System Bold Italic" size="17.0" />
-         </font>
-      </Label>
-       <Button fx:id="rockButton" layoutX="60.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
-       <Button fx:id="paperButton" layoutX="190.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
-       <Button fx:id="scissorsButton" layoutX="320.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
-       <Button fx:id="wellButton" layoutX="450.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
+<AnchorPane fx:id="RockPaperScissorsAnchorpane" prefHeight="884.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="htl.steyr.rockpaperscissors_mhoreth_lkreisma.GameController">
+    <children>
+        <Label layoutX="180.0" layoutY="60.0" prefHeight="89.0" prefWidth="272.0" text="Rock Paper Scissors" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+            <font>
+                <Font name="Gill Sans MT Condensed" size="47.0" />
+            </font>
+        </Label>
+        <Label layoutX="218.0" layoutY="184.0" text="Choose your weapon">
+            <font>
+                <Font name="System Bold Italic" size="17.0" />
+            </font>
+        </Label>
 
-      <ImageView fx:id="myWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="71.0" layoutY="502.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
-      <ImageView fx:id="botWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="380.0" layoutY="502.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="70.0" />
-      <ChoiceBox fx:id="musicChoiceBox" layoutX="14.0" layoutY="849.0" prefWidth="150.0" AnchorPane.leftAnchor="14.0" />
-      <Label layoutX="16.0" layoutY="813.0" text="Music Player" AnchorPane.leftAnchor="14.0">
+        <Button fx:id="rockButton" layoutX="60.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" AnchorPane.leftAnchor="60.0" />
+        <Button fx:id="paperButton" layoutX="190.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
+        <Button fx:id="scissorsButton" layoutX="320.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" />
+        <Button fx:id="wellButton" layoutX="450.0" layoutY="254.0" mnemonicParsing="false" onAction="#weaponButtonClicked" prefHeight="100.0" prefWidth="100.0" AnchorPane.rightAnchor="60.0" />
+
+        <ImageView fx:id="myWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="71.0" layoutY="502.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
+        <ImageView fx:id="botWeaponImageView" fitHeight="150.0" fitWidth="150.0" layoutX="380.0" layoutY="502.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="70.0" />
+
+        <ChoiceBox fx:id="musicChoiceBox" layoutX="14.0" layoutY="811.0" prefWidth="150.0" AnchorPane.leftAnchor="14.0" />
+        <Label layoutX="15.0" layoutY="767.0" text="Music Player" AnchorPane.leftAnchor="15.0">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </Label>
+        <Label layoutX="288.0" layoutY="538.0" text="VS">
+            <font>
+                <Font size="27.0" />
+            </font>
+        </Label>
+        <Label fx:id="displayWinner" alignment="CENTER" contentDisplay="CENTER" layoutX="96.0" layoutY="672.0" prefHeight="47.0" prefWidth="408.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0">
+            <font>
+                <Font size="32.0" />
+            </font>
+        </Label>
+        <Label layoutX="170.0" layoutY="417.0" prefHeight="17.0" prefWidth="53.0" text="Highscore:">
+            <font>
+                <Font name="Gill Sans MT Condensed" size="18.0" />
+            </font>
+        </Label>
+        <Label layoutX="31.0" layoutY="417.0" prefHeight="17.0" prefWidth="30.0" text="Score:">
+            <font>
+                <Font name="Gill Sans MT Condensed" size="18.0" />
+            </font>
+        </Label>
+        <Label fx:id="scoreLabel" layoutX="66.0" layoutY="417.0" text="--">
          <font>
-            <Font size="20.0" />
+            <Font name="Gill Sans MT Condensed" size="18.0" />
+         </font></Label>
+        <Line endX="460.0" layoutX="146.0" layoutY="381.0" startX="-146.0" />
+        <Line endX="-16.5" layoutX="265.0" layoutY="441.0" startX="-100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" />
+        <Line endX="-100.0" endY="23.0" layoutX="264.0" layoutY="418.0" startX="-100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" />
+        <Line endX="-16.5" layoutX="123.0" layoutY="441.0" startX="-100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" />
+        <Line endX="-100.0" endY="23.0" layoutX="123.0" layoutY="418.0" startX="-100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" />
+      <Label fx:id="highscoreLabel" layoutX="231.0" layoutY="417.0" text="--">
+         <font>
+            <Font name="Gill Sans MT Condensed" size="18.0" />
          </font>
       </Label>
-       <Label layoutX="284.0" layoutY="538.0" text="VS">
-           <font>
-               <Font size="27.0" />
-           </font>
-       </Label>
-       <Label fx:id="displayWinner" alignment="CENTER" contentDisplay="CENTER" layoutX="96.0" layoutY="687.0" prefHeight="47.0" prefWidth="408.0">
-           <font>
-               <Font size="32.0" />
-           </font>
-       </Label>
-       <Label layoutX="170.0" layoutY="419.0" prefHeight="17.0" prefWidth="53.0" text="Highscore:">
-         <font>
-            <Font name="Gill Sans MT Condensed" size="18.0" />
-         </font></Label>
-       <Label layoutX="31.0" layoutY="419.0" prefHeight="17.0" prefWidth="30.0" text="Score:">
-         <font>
-            <Font name="Gill Sans MT Condensed" size="18.0" />
-         </font></Label>
-       <Label fx:id="scoreLabel" layoutX="70.0" layoutY="421.0" text="--" />
-       <Label fx:id="highscoreLabel" layoutX="232.0" layoutY="421.0" text="--" />
-      <Line endX="460.0" layoutX="146.0" layoutY="381.0" startX="-146.0" />
-      <Line endX="-16.5" layoutX="265.0" layoutY="441.0" startX="-100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" />
-      <Line endX="-100.0" endY="23.0" layoutX="264.0" layoutY="418.0" startX="-100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" />
-      <Line endX="-16.5" layoutX="123.0" layoutY="441.0" startX="-100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" />
-      <Line endX="-100.0" endY="23.0" layoutX="123.0" layoutY="418.0" startX="-100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" />
-   </children>
+    </children>
 </AnchorPane>
